--- a/busybus.html
+++ b/busybus.html
@@ -61,7 +61,7 @@
     <!-- discovery -->
     <section class="discovery">
       <h2>Discovery Phase:</h2>
-      <p> conducted a survey with transit app users that provided insight into user preferences.
+      <p> I conducted a survey with transit app users that provided insight into user preferences.
         Some key findings:Users appreciate having real time data, a location map, and viewing full schedules
         Users don’t appreciate unnecessary ads and unreliable notifications.</p>
         <aside>
