--- a/about-me.html
+++ b/about-me.html
@@ -7,7 +7,7 @@
 <title>Imani Ricks | Portfolio</title>
 <!-- stylesheet -->
 <link rel="stylesheet" type="text/css" href="css/reset.css">
-<link rel="stylesheet" type="text/css" href="css/about-me.css">
+<link rel="stylesheet" type="text/css" href="css/style.css">
 <!-- font awesome -->
 <script src="https://kit.fontawesome.com/84aa5f5e2b.js" crossorigin="anonymous"></script>
 <!-- googlefonts -->
@@ -36,8 +36,8 @@
    </nav>
 
 <!-- hero image -->
-  <div id="hero">
-	  <section class="hero">
+  <div id="aboutmehero">
+	  <section class="aboutmehero">
       <br>
       <br>
       <br>
@@ -47,7 +47,7 @@
       <img class="me" src="images/me.svg" alt="picture of author">
      </section>
    </div>
-  <div class="main">
+  <div class="aboutmemain">
     <p>
       The first time I heard about UX design, it was in reference to human-computer interaction during a lecture in the Psychology hall of Appalachian State University.<blockquote> The professor referenced a study researchers conducted on the warning systems
         in airplanes that alerted pilots that they were flying too close to the ground. These researchers found that the alert was far more effective if it stated “Pull Up” rather than “Ground Proximity”. This seemingly simple change in the design of these warning
