--- a/busybus.html
+++ b/busybus.html
@@ -7,7 +7,7 @@
 <title>Imani Ricks | Portfolio</title>
 <!-- stylesheet -->
 <link rel="stylesheet" type="text/css" href="css/reset.css">
-<link rel="stylesheet" type="text/css" href="css/busybus.css">
+<link rel="stylesheet" type="text/css" href="css/style.css">
 <!-- font awesome -->
 <script src="https://kit.fontawesome.com/84aa5f5e2b.js" crossorigin="anonymous"></script>
 <!-- googlefonts -->
@@ -35,19 +35,19 @@
       </ul>
    </nav>
 
-  <section class="hero">
+  <section class="projecthero">
     <!-- start case study -->
     <br>
     <br>
     <br>
     <br>
-    <h1>BusyBus</h1>
-    <img src="images/busybus/yellowbus.png" alt="mockup image" class="hero" >
+    <h3>BusyBus</h3>
+    <img src="images/busybus/yellowbus.png" alt="mockup image" class="projecthero" >
     <p>BusyBus is a mobile transportation application designed<br> to help users navigate over-complicated<br>transit systems.<p>
     <a href="https://irricks.github.io/Frontend-challenge/" target="_blank" class="button">View finished prototype</a>
   </section>
     <!-- summary and solution-->
-  <div class="main">
+  <div class="projectmain">
     <section class="problem">
       <h2>Presenting Problem:</h2>
       <p>The client wanted to enter the cloud application market with an application that also provided user collaboration features. </p>
@@ -55,7 +55,7 @@
     <section class="solution">
       <h2>The Solution:</h2>
       <br>
-      <img src="images/busybus/busybusmockup.png" alt="product mockup" class="mockup">
+      <img src="images/busybus/busybusmockup.png" alt="product mockup" class="busmockup">
       <br>
     </section>
     <!-- discovery -->
@@ -65,7 +65,7 @@
         Some key findings:Users appreciate having real time data, a location map, and viewing full schedules
         Users don’t appreciate unnecessary ads and unreliable notifications.</p>
         <aside>
-        <img src="images/busybus/survey.png" alt="user survey image" class="center">
+        <img src="images/busybus/survey.png" alt="user survey image" class="buscenter">
         <a href="https://docs.google.com/spreadsheets/d/1AuDIjE_LeFvHWjQdIg0y05SwsT7R_9zStSk2qE3CP9o/edit?usp=sharing" target="_blank" class="button">View more</a>
         </aside>
      </section>
@@ -73,32 +73,32 @@
     <section>
       <h2>Information Architecture:</h2>
       <p>After gathering the initial research, I began working on how to structure of the content of the application. I started by creating users stories:</p>
-      <img src="images/busybus/users.png" alt="user stories image" class="user">
+      <img src="images/busybus/users.png" alt="user stories image" class="bususer">
       <a href="https://docs.google.com/spreadsheets/d/16T6_oNmkekqiU6KiHm3a2rWygTtXUkap_rypvfT_rLY/edit?usp=sharing" target="_blank" class="button">View more</a>
      </section>
     <section class="prototypes">
       <h2>Prototypes:</h2>
       <p>Combining information from my competitive analysis and my user surveys, I was able to outline what I would like my application to look like. </p>
-      <img src="images/busybus/sketch1.png" alt="prototype" class="prototype">
+      <img src="images/busybus/sketch1.png" alt="prototype" class="busprototype">
       <a href="https://www.dropbox.com/s/jln6v9rd5yeytzz/Screenshot%202020-01-13%2020.25.57.png?dl=0" target="_blank" class="button">View more</a>
        </section>
     <section class="usability">
       <h2>Usability Tests:</h2>
       <p>After creating the initial sketches, I decided to test three users on the flow of the application. The feedback users gave was that the icons on the application could use more clarity,
          and that the second screen on the application felt cluttered. <br><br>From there, I created a second round of sketches:</p>
-         <img src="images/busybus/sketch2.png" alt="prototype" class="prototype2">
+         <img src="images/busybus/sketch2.png" alt="prototype" class="busprototype2">
          <a href="https://www.dropbox.com/s/itjbhzklfll8s3t/image%20%281%29.png?dl=0" target="_blank" class="button">View more</a>
       </section>
     <section class="mockups">
       <h2>High Fidelity Mockups Version 1:</h2>
       <p>After the feedback from the usability tests, I was able to create high fidelity mockups of my final application.</p>
-      <img src="images/busybus/version1.png" alt="mockup image" class="mockupimage">
+      <img src="images/busybus/version1.png" alt="mockup image" class="busmockupimage">
       <a href="https://www.dropbox.com/s/z190568mtl328cf/prototype3.png?dl=0" target="_blank" class="button">View more</a>
        </section>
     <section class="mockups">
      <h2>High Fidelity Mockups Version 1:</h2>
      <p>After the feedback from the usability tests, I was able to create high fidelity mockups of my final application.</p>
-     <img src="images/busybus/version2.png" alt="mockup image" class="mockupimage">
+     <img src="images/busybus/version2.png" alt="mockup image" class="busmockupimage">
      <a href="https://www.dropbox.com/s/lt37fwppvxk1bm6/image%20%284%29.png?dl=0" target="_blank" class="button">View more</a>
       </section>
     <!-- final project -->
@@ -106,7 +106,7 @@
       <h2>Final Design:</h2>
       <p>With the final design of BusyBus, I decided to incorporate some more feedback I recieved. I created a visual alert (red) for incoming buses.
         I also adjusted the visual hierarchy of the bus numbers and route names.</p>
-      <img src="images/busybus/finalversion.png" alt="final design" class="final">
+      <img src="images/busybus/finalversion.png" alt="final design" class="busfinal">
       <a href="https://irricks.github.io/Frontend-challenge/" target="_blank" class="button">View prototype</a>
     </section>
     <!-- conclusion -->
@@ -118,7 +118,7 @@
     </div>
     <!-- connect with me -->
       <section class="connect">
-         <h3>Connect with me:</h3>
+         <h4>Connect with me:</h4>
          <p>Thanks for stopping by.<br>Please reach out if you want to chat or have<br>any questions!</p>
          <a href="/contact.html" class="button">Message me</a>
        </section>
