--- a/project.html
+++ b/project.html
@@ -7,7 +7,7 @@
 <title>Imani Ricks | Portfolio</title>
 <!-- stylesheet -->
 <link rel="stylesheet" type="text/css" href="css/reset.css">
-<link rel="stylesheet" type="text/css" href="css/project.css">
+<link rel="stylesheet" type="text/css" href="css/style.css">
 <!-- font awesome -->
 <script src="https://kit.fontawesome.com/84aa5f5e2b.js" crossorigin="anonymous"></script>
 <!-- googlefonts -->
@@ -35,20 +35,20 @@
       </ul>
    </nav>
 
-  <section class="hero">
+  <section class="projecthero">
     <!-- start case study -->
     <br>
     <br>
     <br>
     <br>
-    <h1>Trove</h1>
-    <img class="hero" src="images/trove/troveblue.png" alt="trove mockup image" class="troveblue">
+    <h3>Trove</h3>
+    <img class="projecthero" src="images/trove/troveblue.png" alt="trove mockup image" class="troveblue">
     <p>Trove is a cloud storage application that combines<br> storage and organization with real-time<br> collaboration.<p>
     <a href="https://invis.io/WDW7L578ZBC" target="_blank" class="button">View finished prototype</a>
   </section>
 
     <!-- summary and solution-->
-  <div class="main">
+  <div class="projectmain">
     <section class="summary">
       <h2>Summary:</h2>
       <p>In the ever-expanding cloud storage marketplace, something was missing.
