--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
 <title>Imani Ricks | Contact</title>
 <!-- stylesheet -->
 <link rel="stylesheet" type="text/css" href="css/reset.css">
-<link rel="stylesheet" type="text/css" href="css/contact.css">
+<link rel="stylesheet" type="text/css" href="css/style.css">
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-75461753-2"></script>
 <script>
@@ -34,31 +34,29 @@
    <br>
    <br>
    <br>
-   <br>
-   <div id="form-main">
-     <div id="form-div">
-       <form class="form" id="form1">
+     <div id="contact-area">
 
-         <p class="name">
-           <input name="name" type="text" class="validate[required,custom[onlyLetter],length[0,100]] feedback-input" placeholder="Name" id="name" />
-         </p>
+       <form method="post" action="contactengine.php">
+         <label for="Name">Name:</label>
+         <input type="text" name="Name" id="Name" />
 
-         <p class="email">
-        <input name="email" type="text" class="validate[required,custom[email]] feedback-input" id="email" placeholder="Email" />
-        </p>
+         <label for="City">City:</label>
+         <input type="text" name="City" id="City" />
 
-        <p class="text">
-          <textarea name="text" class="validate[required,length[6,300]] feedback-input" id="comment" placeholder="Comment"></textarea>
-        </p>
+         <label for="Email">Email:</label>
+         <input type="text" name="Email" id="Email" />
+
+         <label for="Message">Message:</label><br />
+         <textarea name="Message" rows="20" cols="20" id="Message"></textarea>
+
+         <input type="submit" name="submit" value="Submit" class="submit-button" />
+       </form>
+
+       <div style="clear: both;"></div>
 
 
-        <div class="submit">
-          <input type="submit" value="SEND" id="button-blue"/>
-          <div class="ease"></div>
-        </div>
-      </form>
-    </div>
-  </div>
+
+     </div>
 </div>
   </body>
   </html>
