--- a/about-me.html
+++ b/about-me.html
@@ -51,7 +51,7 @@
     <p>
       The first time I heard about UX design, it was in reference to human-computer interaction during a lecture in the Psychology hall of Appalachian State University.<blockquote> The professor referenced a study researchers conducted on the warning systems
         in airplanes that alerted pilots that they were flying too close to the ground. These researchers found that the alert was far more effective if it stated “Pull Up” rather than “Ground Proximity”. This seemingly simple change in the design of these warning
-         systems, based on user preferences, changed the airline industry forever.</p></blockquote>
+         systems, based on user preferences, changed the airline industry forever.</blockquote>
          <p>This story has stuck with me as I’ve always been cognizant of how changes in design can greatly improve the human condition. Prior to making the decision to pursue UX design,
           and after graduating with my degree in Psychology,  I devoted my time to working on the front lines of the food service, education and mental health industries. I’ve held a variety of positions, including: a manager of a restaurant, a server, an English
           teacher, a social worker and a school-based therapist. My decision to pursue these careers was driven by a desire to help those around me in a meaningful way.<br><br>I stumbled into UX Design when I was struck by the fact that those I worked with were being
