--- a/project.html
+++ b/project.html
@@ -42,7 +42,7 @@
     <br>
     <br>
     <h3>Trove</h3>
-    <img class="projecthero" src="images/trove/troveblue.png" alt="trove mockup image" class="troveblue">
+    <img src="images/trove/troveblue.png" alt="trove mockup image" class="troveblue">
     <p>Trove is a cloud storage application that combines<br> storage and organization with real-time<br> collaboration.<p>
     <a href="https://invis.io/WDW7L578ZBC" target="_blank" class="button">View finished prototype</a>
   </section>
