--- a/about-me.html
+++ b/about-me.html
@@ -57,7 +57,8 @@
           teacher, a social worker and a school-based therapist. My decision to pursue these careers was driven by a desire to help those around me in a meaningful way.<br><br>I stumbled into UX Design when I was struck by the fact that those I worked with were being
           asked to use systems that were impractical for the tasks at hand. I began thinking back to the other jobs I’d held and the frustrations met in each. I thought about the technology that had both customers and employees frustrated and exhausted. Despite the numerous
            trainings provided, the issue was that these applications, these products weren’t user friendly. That’s when I knew that I wanted to make designs for those in the trenches of our most vital industries.That’s when I knew I wanted to advocate for the user experience.
-           My goal as a UX designer is to use my passion to solve problems in a creative and empathetic way.</p>
+           My goal as a UX designer is to use my passion to solve problems in a creative and empathetic way.<br>
+           <a href="/documents/ImaniRicks_052020.pdf"> Download my resume </a></p>
     <h2>My Skills:</h2>
     <ul class="skills">
       <li>Surveys</li>
@@ -77,8 +78,8 @@
       <li>Git</li>
       <li>Chrome Dev Tools</li>
     </ul>
-
   </div>
+
 
  <!-- connect with me -->
      <section class="connect">
