--- a/busybus.html
+++ b/busybus.html
@@ -112,7 +112,7 @@
     <!-- conclusion -->
     <section>
       <h2>Conclusion:</h2>
-      <p>My final design for BusyBus stuck to my original purpose: to help users find important information in an easy-to-digest way,.
+      <p>My final design for BusyBus stuck to my original purpose: to help users find important information in an easy-to-digest way.
         The next step I would like to take with this design would be creating a brand identity.</p>
       </section>
     </div>
