--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 <!-- stylesheet -->
 <link rel="stylesheet" type="text/css" href="css/reset.css">
 <link rel="stylesheet" type="text/css" href="css/style.css">
-<link rel="icon" href="favicon.ico">
+<!--- favicon ---->
+<link rel="icon" href="favicon.gif" type="image/gif" sizes="16x16">
 <!-- font awesome -->
 <script src="https://kit.fontawesome.com/84aa5f5e2b.js" crossorigin="anonymous"></script>
 <!-- googlefonts -->
