--- a/project.html
+++ b/project.html
@@ -185,7 +185,7 @@
     <!-- footer -->
     <footer>
       <ul class="socialmedia">
-       <li><a href="mailto:ricksimaniruby@gmail.com" target="_blank"><i class="fas fa-envelope fa-2x"></i></a></li>
+       <li><a href="/contact.html" target="_blank"><i class="fas fa-envelope-square fa-2x"></i></a></li>
        <li><a href="https://github.com/IRRicks" target="_blank"><i class="fab fa-github-square fa-2x"></i></a></li>
        <li><a href="https://www.linkedin.com/in/imani-ricks/" target="_blank"><i class="fab fa-linkedin fa-2x"></i></a></li>
        <li><a href="https://dribbble.com/RRicks" target="_blank"><i class="fab fa-dribbble-square fa-2x"></i></a></li>
