--- a/index.html
+++ b/index.html
@@ -8,8 +8,14 @@
 <!-- stylesheet -->
 <link rel="stylesheet" type="text/css" href="css/reset.css">
 <link rel="stylesheet" type="text/css" href="css/style.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css" />
+<!-- Wowjs -->
+<script src="js/wow.min.js"></script>
+             <script>
+             new WOW().init();
+             </script>
 <!--- favicon ---->
-<link rel="icon" href="favicon.gif" type="image/gif" sizes="16x16">
+<link rel="icon" href="images/favicon.gif" type="image/gif" sizes="16x16">
 <!-- font awesome -->
 <script src="https://kit.fontawesome.com/84aa5f5e2b.js" crossorigin="anonymous"></script>
 <!-- googlefonts -->
@@ -50,8 +56,8 @@
          <i class="fas fa-angle-double-down fa-2x"></i>
        </section>
    <!-- main content -->
-    <div class="main">
-      <div class="project1">
+    <div class="main" "wow slideInUp">
+      <div class="projects">
       <h3>My Work</h3>
       <aside class="trove">
         <img src="images/iphone2.png" class="trovepic" alt="trove mockup photo">
@@ -61,8 +67,6 @@
           <p>"Trove" is my design for a new cloud storage application<br> that incorporates both storage and user collaboration.</p>
           <a href="/project.html" target="_blank" class="button">Case study</a>
             </section>
-        </div>
-       <div class="project2">
       <section class="busybus_project">
           <h4>Busy Bus Project</h4>
           <p>"Busy Bus" is my design for a new mobile transportation<br> application that helps users find bus route information.</p>
@@ -75,6 +79,7 @@
       </div>
 
      <!-- designprocess -->
+
       <section class="design_process">
           <br>
           <br>
@@ -82,7 +87,7 @@
           <aside class="designpic">
           <img class="design" src="images/designprocess.svg" alt="design process image">
            </aside>
-      </section>
+        </section>
 
  <!-- connect with me -->
    <section class="connect">
