--- a/project.html
+++ b/project.html
@@ -110,17 +110,21 @@
       <img src="images/trove/userstories.png" alt="user stories image" class="center">
       <a href="https://drive.google.com/open?id=1S1gUj6Uu6P7MTHY5k8NGzSel-ztqAYu9XA4h4HjIeaM" target="_blank" class="button">View more</a>
      </section>
-    <section>
+    <div class="userflow">
       <h2>User Flows:</h2>
         <br>
         <img src="images/trove/userflow1.png" alt="user flows image" class="user">
         <img src="images/trove/userflow2.png" alt="user flows image" class="user">
         <img src="images/trove/userflow3.png" alt="user flows image" class="user">
+          </div>
+    <div>
         <a href="https://paper.dropbox.com/doc/User-Flows-2--AzATkSmnmO6PDH21JKlk~FRZAQ-hAYhkSMHhNcfglCncnUa8" target="_blank" class="button">View more</a>
-      </section>
+      </div>
     <section class="wireframes">
-      <h2>Wireframes:</h2>
+      <h2>Sketches and Wireframes:</h2>
       <p>Combining information from my competitive analysis and my user surveys, I was able to outline what I would like my application to look like. </p>
+      <img src="images/trove/trove_sketch1.jpg" alt="wireframe image" class="wireframeimage">
+      <img src="images/trove/trove_sketch2.jpg" alt="wireframe image" class="wireframeimage">
       <img src="images/trove/wireframe2.png" alt="wireframe image" class="wireframeimage">
       <a href="https://invis.io/4UWRY15XM9Q" target="_blank" class="button">View more</a>
        </section>
