--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
    <!-- main content -->
     <div class="main">
       <h3>My Work</h3>
-      <div class="fade-scroll">
+      <div class="project1 fade-scroll">
       <aside class="trove">
         <img src="images/iphone2.png" class="trovepic" alt="trove mockup photo">
       </aside>
@@ -84,7 +84,7 @@
           <a href="/project.html" target="_blank" class="button">Case study</a>
             </section>
         </div>
-      <div class="fade-scroll">
+      <div class="project2 fade-scroll">
       <section class="busybus_project">
           <h4>Busy Bus Project</h4>
           <p>"Busy Bus" is my design for a new mobile transportation<br> application that helps users find bus route information.</p>
