Created work.html file.
Created work.html file. Linked it from index.html. Changed layout of contact.me and font from Playfair Display to Montserrat on H3 H4.
Added images from mockup sites.

--- a/busybus.html
+++ b/busybus.html
@@ -142,8 +142,12 @@
     </div>
     <!-- connect with me -->
       <section class="connect">
-         <h4>Connect with me:</h4>
-         <p>Thanks for stopping by.<br>Please reach out if you want to chat or have<br>any questions!</p>
+        <br>
+        <br>
+        <br>
+        <br>
+         <h3>Let's Connect</h3>
+         <p>Please reach out if you want to chat or have any questions!</p>
          <a href="/contact.html" class="button">Message me</a>
        </section>
     <!-- footer -->
