--- a/about-me.html
+++ b/about-me.html
@@ -105,12 +105,16 @@
   </div>
 
 
- <!-- connect with me -->
-     <section class="connect">
-      <h3>Connect with me:</h3>
-      <p>Thanks for stopping by.<br>Please reach out if you want to chat or have<br>any questions!</p>
-      <a href="/contact.html" class="button">Message me</a>
-    </section>
+  <!-- connect with me -->
+    <section class="connect">
+      <br>
+      <br>
+      <br>
+      <br>
+       <h3>Let's Connect</h3>
+       <p>Please reach out if you want to chat or have any questions!</p>
+       <a href="/contact.html" class="button">Message me</a>
+     </section>
     <!-- footer -->
       <footer>
         <ul class="socialmedia">
