--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <ul>
         <li><a id="contact_nav" href="/contact.html">Contact</a></li>
         <li><a id="about_me" href="/about-me.html">About</a></li>
-        <li><a id="work" href="/index.html">Work</a></li>
+        <li><a id="work" href="/work.html">Work</a></li>
       </ul>
    </nav>
 
@@ -73,7 +73,6 @@
        </section>
    <!-- main content -->
     <div class="main">
-      <h3>My Work</h3>
       <div class="project1 fade-scroll">
       <aside class="trove">
         <img src="images/iphone2.png" class="trovepic" alt="trove mockup photo">
@@ -102,7 +101,6 @@
           <br>
           <br>
           <div class="fade-scroll">
-          <h3>My Design Process</h3>
           <aside class="designpic">
           <img class="design" src="images/designprocess.svg" alt="design process image">
            </aside>
@@ -111,8 +109,12 @@
 
  <!-- connect with me -->
    <section class="connect">
-      <h3>Connect with me</h3>
-      <p>Thanks for stopping by.<br>Please reach out if you want to chat or have<br>any questions!</p>
+     <br>
+     <br>
+     <br>
+     <br>
+      <h3>Let's Connect</h3>
+      <p>Please reach out if you want to chat or have any questions!</p>
       <a href="/contact.html" class="button">Message me</a>
     </section>
 
