--- a/project.html
+++ b/project.html
@@ -206,8 +206,12 @@
     </div>
     <!-- connect with me -->
       <section class="connect">
-         <h3>Connect with me:</h3>
-         <p>Thanks for stopping by.<br>Please reach out if you want to chat or have<br>any questions!</p>
+        <br>
+        <br>
+        <br>
+        <br>
+         <h3>Let's Connect</h3>
+         <p>Please reach out if you want to chat or have any questions!</p>
          <a href="/contact.html" class="button">Message me</a>
        </section>
     <!-- footer -->
