Updated work page
New image gallery

--- a/work.html
+++ b/work.html
@@ -48,7 +48,6 @@
 </head>
 
 <body>
- <div class="container">
    <!-- nav bar -->
   <nav class="navbar">
       <a href="/index.html"><img id="logo" src="images/dotlogo2.svg" alt="imani ricks logo"></a>
@@ -65,102 +64,42 @@
     <br>
     <br>
     <br>
-    <br>
-    <br>
-    <br>
-<div class="direction">
-    <dl class="direction-aware-hover">
-  <dt class="direction-aware-hover__left"></dt>
-  <dt class="direction-aware-hover__right"></dt>
-  <dt class="direction-aware-hover__top"></dt>
-  <dt class="direction-aware-hover__bottom"></dt>
-  <dd class="direction-aware-hover__content">
-    Trove
-  </dd>
-</dl>
+    <div class="gallery">
+    <div class="thumbnail-1 wow fadeInLeft">
+      <img src="images/Work/smartmockups_kby2urq9.jpg" alt="Trove" />
+      <div class="caption">
+        <h3 class="wow fadeInUp">Trove</h3>
+      </div>
+    </div>
+    <div class="large-1 wow bounceInLeft">
+      <img src="images/Work/smartmockups_kby2urq9.jpg" alt="" />
+      <span class="close">&#x2715;</span>
+    </div>
+    <div class="thumbnail-2 wow fadeInDown">
+      <img src="images/Work/smartmockups_busybus.jpg" alt="" />
+      <div class="caption">
+        <h3 class="wow fadeInUp">BusyBus</h3>
+      </div>
+    </div>
+    <div class="large-2 wow bounceInDown">
+      <img src="images/Work/smartmockups_busybus.jpg" alt="" />
+      <span class="close">&#x2715;</span>
+    </div>
+    <div class="thumbnail-3 wow fadeInRight">
+      <img src="images/Work/smartmockups_medchat.jpg" alt="" />
+      <div class="caption">
+        <h3 class="wow fadeInUp">MedChat</h3>
+      </div>
+    </div>
+    <div class="large-3 wow bounceInRight">
+      <img src="images/Work/smartmockups_medchat.jpg" alt="" />
+      <span class="close">&#x2715;</span>
+    </div>
+  </div>
 
-<dl class="direction-aware-hover">
-  <dt class="direction-aware-hover__left"></dt>
-  <dt class="direction-aware-hover__right"></dt>
-  <dt class="direction-aware-hover__top"></dt>
-  <dt class="direction-aware-hover__bottom"></dt>
-  <dd class="direction-aware-hover__content">
-    BusyBus
-  </dd>
-</dl>
-
-<dl class="direction-aware-hover">
-  <dt class="direction-aware-hover__left"></dt>
-  <dt class="direction-aware-hover__right"></dt>
-  <dt class="direction-aware-hover__top"></dt>
-  <dt class="direction-aware-hover__bottom"></dt>
-  <dd class="direction-aware-hover__content">
-    MedChat
-  </dd>
-</dl>
-
-<dl class="direction-aware-hover">
-  <dt class="direction-aware-hover__left"></dt>
-  <dt class="direction-aware-hover__right"></dt>
-  <dt class="direction-aware-hover__top"></dt>
-  <dt class="direction-aware-hover__bottom"></dt>
-  <dd class="direction-aware-hover__content">
-    CrabVolleyball
-  </dd>
-</dl>
-
-<dl class="direction-aware-hover">
-  <dt class="direction-aware-hover__left"></dt>
-  <dt class="direction-aware-hover__right"></dt>
-  <dt class="direction-aware-hover__top"></dt>
-  <dt class="direction-aware-hover__bottom"></dt>
-  <dd class="direction-aware-hover__content">
-   Coming Soon...
-  </dd>
-</dl>
-
-<dl class="direction-aware-hover">
-  <dt class="direction-aware-hover__left"></dt>
-  <dt class="direction-aware-hover__right"></dt>
-  <dt class="direction-aware-hover__top"></dt>
-  <dt class="direction-aware-hover__bottom"></dt>
-  <dd class="direction-aware-hover__content">
-    Coming Soon...
-  </dd>
-</dl>
-
-<dl class="direction-aware-hover">
-  <dt class="direction-aware-hover__left"></dt>
-  <dt class="direction-aware-hover__right"></dt>
-  <dt class="direction-aware-hover__top"></dt>
-  <dt class="direction-aware-hover__bottom"></dt>
-  <dd class="direction-aware-hover__content">
-    Coming Soon...
-  </dd>
-</dl>
-
-<dl class="direction-aware-hover">
-  <dt class="direction-aware-hover__left"></dt>
-  <dt class="direction-aware-hover__right"></dt>
-  <dt class="direction-aware-hover__top"></dt>
-  <dt class="direction-aware-hover__bottom"></dt>
-  <dd class="direction-aware-hover__content">
-    Coming Soon...
-  </dd>
-</dl>
-
-<dl class="direction-aware-hover">
-  <dt class="direction-aware-hover__left"></dt>
-  <dt class="direction-aware-hover__right"></dt>
-  <dt class="direction-aware-hover__top"></dt>
-  <dt class="direction-aware-hover__bottom"></dt>
-  <dd class="direction-aware-hover__content">
-    Coming Soon...
-  </dd>
-</dl>
-</div>
 
     <!-- connect with me -->
+    <div class="workconnect">
       <section class="connect">
         <br>
         <br>
@@ -170,18 +109,7 @@
          <p>Please reach out if you want to chat or have any questions!</p>
          <a href="/contact.html" class="button">Message me</a>
        </section>
-
-    <!-- footer -->
-      <footer>
-        <ul class="socialmedia">
-         <li><a href="/contact.html" target="_blank"><i class="fas fa-envelope-square fa-2x"></i></a></li>
-         <li><a href="https://github.com/IRRicks" target="_blank"><i class="fab fa-github-square fa-2x"></i></a></li>
-         <li><a href="https://www.linkedin.com/in/imani-ricks/" target="_blank"><i class="fab fa-linkedin fa-2x"></i></a></li>
-         <li><a href="https://dribbble.com/RRicks" target="_blank"><i class="fab fa-dribbble-square fa-2x"></i></a></li>
-        </ul>
-        <p>Designed and Developed by Imani Ricks 2020</p>
-      </footer>
     </div>
-    </body>
+  </body>
 
-    </html>
+  </html>
