--- a/project.html
+++ b/project.html
@@ -214,17 +214,18 @@
          <p>Please reach out if you want to chat or have any questions!</p>
          <a href="/contact.html" class="button">Message me</a>
        </section>
+  
     <!-- footer -->
-    <footer>
-      <ul class="socialmedia">
-       <li><a href="/contact.html" target="_blank"><i class="fas fa-envelope-square fa-2x"></i></a></li>
-       <li><a href="https://github.com/IRRicks" target="_blank"><i class="fab fa-github-square fa-2x"></i></a></li>
-       <li><a href="https://www.linkedin.com/in/imani-ricks/" target="_blank"><i class="fab fa-linkedin fa-2x"></i></a></li>
-       <li><a href="https://dribbble.com/RRicks" target="_blank"><i class="fab fa-dribbble-square fa-2x"></i></a></li>
-      </ul>
-      <p>Designed and Developed by Imani Ricks 2020</p>
-    </footer>
-  </div>
+      <footer class="footer">
+        <ul class="socialmedia">
+         <li><a href="/contact.html" target="_blank"><i class="fas fa-envelope-square fa-2x"></i></a></li>
+         <li><a href="https://github.com/IRRicks" target="_blank"><i class="fab fa-github-square fa-2x"></i></a></li>
+         <li><a href="https://www.linkedin.com/in/imani-ricks/" target="_blank"><i class="fab fa-linkedin fa-2x"></i></a></li>
+         <li><a href="https://dribbble.com/RRicks" target="_blank"><i class="fab fa-dribbble-square fa-2x"></i></a></li>
+        </ul>
+        <p>Designed and Developed by Imani Ricks 2020</p>
+      </footer>
+    </div>
  </body>
 
 </html>
