Updated homepage links

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
            <div class="project_info">
            <h4>MedChat</h4>
            <p>"MedChat" is my idea for a a patient-portal application.</p>
-           <a href="/project.html" target="_blank" class="button">Case study</a>
+           <a href="" target="_blank" class="button">Coming Soon</a>
          </div>
         </div>
       </div>
@@ -110,7 +110,7 @@
           <div class="project_info">
           <h4>BusyBus</h4>
           <p>"BusyBus" is my design for a transportation application that provides clearer information for users.</p>
-          <a href="/project.html" target="_blank" class="button">Case study</a>
+          <a href="/busybus.html" target="_blank" class="button">Case study</a>
           </div>
           </div>
          </div>
